Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37329

Windows: QFileDialog::setNameFilter does not work as expected for native dialog (when omitting description text)

XMLWordPrintable

    • 7b8d4cdb1098547ab2d2cc5337cae0496bb4ef61 (stable, 17.3.2014 5.3)

      Documentation of QFileDialog::setNameFilter says these two ways to set filters:

      dialog.setNameFilter("All C++ files (*.cpp *.cc *.C *.cxx *.c++)");
      dialog.setNameFilter("*.cpp *.cc *.C *.cxx *.c++");

      Second one is not working when using Windows native dialog. Behavior is that all files are shown.

        1. QTBUG-37329.patch
          0.8 kB
          Qt Support
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes